--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.1",
     "next": "12.1.6",
+    "normalize.css": "^8.0.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tss-react": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.36",
